Making biome config changes a single commit