@@ -8,7 +8,6 @@ import mysticmods.mysticalworld.init.ModMaterials;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.tags.BiomeTags;
 import net.minecraft.world.level.Level;
-import net.minecraftforge.common.BiomeDictionary;
 import net.minecraftforge.common.ForgeConfigSpec;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod;
@@ -98,11 +97,11 @@ public class ConfigManager {
 
     COMMON_BUILDER.pop();
     COMMON_BUILDER.comment("Feature Spawn Configuration").push("feature_spawns");
-    DEAD_TREE_CONFIG = new TreeConfig(0.02, Arrays.asList(BiomeDictionary.Type.SAVANNA, BiomeDictionary.Type.DEAD, BiomeDictionary.Type.FOREST, BiomeDictionary.Type.SANDY, BiomeDictionary.Type.WASTELAND), Arrays.asList(BiomeDictionary.Type.NETHER, BiomeDictionary.Type.END), defaultDimensions);
+    DEAD_TREE_CONFIG = new TreeConfig(0.02, List.of(BiomeTags.IS_SAVANNA, BiomeTags.IS_FOREST, BiomeTags.HAS_DESERT_PYRAMID, BiomeTags.IS_BADLANDS), List.of(BiomeTags.IS_NETHER, BiomeTags.IS_END), defaultDimensions);
     DEAD_TREE_CONFIG.apply(COMMON_BUILDER);
-    STONEPETAL_CONFIG = new StonepetalConfig(1, 7, Arrays.asList(BiomeDictionary.Type.MOUNTAIN), Arrays.asList(BiomeDictionary.Type.NETHER, BiomeDictionary.Type.END), defaultDimensions);
+    STONEPETAL_CONFIG = new StonepetalConfig(1, 7, List.of(BiomeTags.IS_MOUNTAIN), List.of(BiomeTags.IS_NETHER, BiomeTags.IS_END), defaultDimensions);
     STONEPETAL_CONFIG.apply(COMMON_BUILDER);
-    WILD_AUBERGINE = new WildAubergineConfig(1, 20, Arrays.asList(BiomeDictionary.Type.PLAINS, BiomeDictionary.Type.FOREST, BiomeDictionary.Type.LUSH, BiomeDictionary.Type.HILLS, BiomeDictionary.Type.JUNGLE), Arrays.asList(BiomeDictionary.Type.NETHER, BiomeDictionary.Type.END), defaultDimensions);
+    WILD_AUBERGINE = new WildAubergineConfig(1, 20, List.of(BiomeTags.IS_FOREST, BiomeTags.IS_HILL, BiomeTags.IS_JUNGLE), List.of(BiomeTags.IS_NETHER, BiomeTags.IS_END), defaultDimensions);
     WILD_AUBERGINE.apply(COMMON_BUILDER);
     SEED_INJECTION = COMMON_BUILDER.comment("Whether or not the aubergine loot table is injected into the grass seed table (default: false in favor of wild aubergine)").define("seed_injection", false);
     LOOT_INJECTION = COMMON_BUILDER.comment("Whether or not loot should be injected to Vanilla tables").define("loot_injection", true);
